Wire vector search into the demo, and document it
The demo gains a vector field over report title + description, a Semantic search
toggle in the app, and two query files covering plain and filtered similarity
search. The toggle changes exactly one thing in the generated SPARQL — the
fieldSpec argument — which is the point of routing KNN through fieldSpec rather
than a separate property function.

The demo defaults to the hashing provider so 'task serve' works with no model
download. That provider compares words, not meaning, and both the README and the
config say so plainly rather than letting the demo imply semantic quality it does
not have. index-jlama/serve-jlama switch to real embeddings; they assemble a
classpath because jena-text-embeddings is deliberately not a dependency of the
Fuseki server jar.

TestDemoVectorConfig asserts the demo config actually assembles and that its
declared dimension matches its provider. The demo config is what a first-time
user copies, and a dimension that drifts out of step with the provider surfaces
as a server that will not start.

The design note is updated to record what was built and what changed in the
building: Tier 2 was not deferred, verbalisation became explicit config, and
there is no luc:knn. It also records that Jlama remains unverified against a real
model, and that its BERT-only constraint is a live argument for the ONNX
fallback.